--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .no-webp body {
-  background: url("../img/bg.jpg") no-repeat center center fixed;
+  background: url("../img/img3.jpg") no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -7,20 +11,17 @@
 }
 
 .webp body {
-  background: url("../img/bg.webp") no-repeat center center fixed;
+  background: url("../img/img3.jpg") no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
 }
 
-body {
-  font-family: 'Open Sans', sans-serif;
-}
-
 @media only screen and (max-width: 768px) {
-  body {
+  .no-webp body, .webp body {
     background: #eee;
+    -webkit-background-image: unset;
   }
 
   .container {
@@ -176,23 +177,38 @@ label {
 }
 
 /* Navbar */
-#navbar-table {
+@media only screen and (max-device-width: 992px) {
+
+  #desktop-navbar {
+    display: none;
+  }
+}
+@media only screen and (min-device-width: 993px){
+  .nav-link {
+    display: inline-block;
+  }
+  #mobile-navbar {
+    display: none;
+  }
+}
+
+.navbar-table {
   width: 100%;
   text-align: center;
   color: white;
   display: flex;
 }
 
-#navbar-table li {
+.navbar-table li {
   display: block;
 }
 
-#navbar-table a {
+.navbar-table a {
   padding: 8px;
   color: rgba(255, 255, 255, .5);
 }
 
-#navbar-table a:hover {
+.navbar-table a:hover {
   color: #fff;
 }
 
@@ -249,8 +265,8 @@ article {
 
 
 #posts-excerpts {
-  max-width: 692px;
-  /*margin: 0 auto;*/
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .post-title {
@@ -270,9 +286,9 @@ article {
   bottom: 0;
   left: 0;
   pointer-events: none;
-  background-image: linear-gradient(to bottom,
+/*  background-image: linear-gradient(to bottom,
   rgba(92, 184, 92, 0),
-  rgba(92, 184, 92, 1) 80%);
+  rgba(92, 184, 92, 1) 80%);*/
   width: 100%;
   height: 3em;
 }
